--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,9 @@
 buildscript {
     repositories {
         jcenter()
+        mavenCentral()
+
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:1.0.0'
@@ -14,6 +17,7 @@ buildscript {
 
 allprojects {
     repositories {
+        mavenCentral()
         jcenter()
     }
 }
